--- a/home/wiki/App/Xtn/Page_sync.html
+++ b/home/wiki/App/Xtn/Page_sync.html
@@ -143,11 +143,16 @@
       The Page sync feature is still a work in progress. The following are known issues:
     </p>
     <h3>
-      <span class="mw-headline" id="Math.2C_Helper_Buttons_.28enlarge_.2F_more_info.29.2C_Musical_scores.2C_and_other_images_don.27t_work">Math, Helper Buttons (enlarge / more info), Musical scores, and other images don't work</span>
+      <span class="mw-headline" id="Math.2C_Helper_Buttons_.28enlarge_.2F_more_info.29.2C_Musical_scores.2C_and_other_images_don.27t_work"><s>Math,</s> Helper Buttons (enlarge / more info), Musical scores, and other images don't work</span>
     </h3>
     <p>
-      Wikipedia stores some images in a separate location. XOWA still needs code to detect this location, copy it offline, and show it correctly. This should be done in the next few releases, but in the meantime it's heavily recommended that you don't use Automatic sync for all pages. In particular, math pages will lose all equations after a sync. For example, <a href="https://en.wikipedia.org/wiki/Pythagorean_theorem" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Pythagorean_theorem</a>
+      Wikipedia stores some images in a separate location. XOWA still needs code to detect this location, copy it offline, and show it correctly. This should be done in the next few releases, but in the meantime it's heavily recommended that you don't use Automatic sync for all pages. <s>In particular, math pages will lose all equations after a sync. For example, <a href="https://en.wikipedia.org/wiki/Pythagorean_theorem" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Pythagorean_theorem</a></s>
     </p>
+    <ul>
+      <li>
+        v3.9.4.1 now syncs Math images
+      </li>
+    </ul>
     <h3>
       <span class="mw-headline" id="No_rollback_option">No rollback option</span>
     </h3>
