--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -454,7 +454,7 @@
         (add) Html: Embed file name / width / height in HTML.
       </li>
       <li>
-        (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server">App/Xtn/Browser/HTTP_Server</a>
+        (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server" class="xowa-visited">App/Xtn/Browser/HTTP_Server</a>
       </li>
       <li>
         (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language">Options/Language</a>
@@ -1099,7 +1099,7 @@
     </p>
     <ul>
       <li>
-        (add) Gui: Application menu bar now available. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_21" title="Options/Menus" class="xowa-visited">Options/Menus</a>
+        (add) Gui: Application menu bar now available. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_21" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
         (add) Addon: Addon can automatically redirect http: to xowa: when offline {contributed by treck}.
@@ -2152,7 +2152,7 @@
     </p>
     <ul>
       <li>
-        (add) Wikidata: #property and Infoboxes (Phase 2) {assisted by Schnark} <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property.html" id="xolnki_53" title="Diagnostics/Wikidata/Property">Diagnostics/Wikidata/Property</a>
+        (add) Wikidata: #property and Infoboxes (Phase 2) {assisted by Schnark} <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property.html" id="xolnki_53" title="Diagnostics/Wikidata/Property" class="xowa-visited">Diagnostics/Wikidata/Property</a>
       </li>
       <li>
         (add) Wikidata Json structured data formatter {contributed by Schnark} <a href="http://www.wikidata.org/wiki/Q2" rel="nofollow" class="external free">http://www.wikidata.org/wiki/Q2</a>
@@ -2327,7 +2327,7 @@
     </p>
     <ul>
       <li>
-        (add) Preliminary support for Scribunto/Lua. See <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_57" title="Options/Scribunto">Options/Scribunto</a>
+        (add) Preliminary support for Scribunto/Lua. See <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_57" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
       </li>
       <li>
         (add) Improvements to Schnark's Javascript Timeline {contributed by Schnark}
