--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -2986,7 +2986,7 @@
         Gui.Url_bar: Do not lose history page position after editing page; EX:Open page -&gt; Scroll down -&gt; Click link -&gt; Edit -&gt; Click back -&gt; Position should be restored {detected by Schnark}.
       </li>
       <li>
-        Gui: Fix StackOverflow exception when auto_focus_id is " first_anchor" and exiting app on Help:Options page. See: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_76" title="Options/Scribunto">Options/Scribunto</a>
+        Gui: Fix StackOverflow exception when auto_focus_id is " first_anchor" and exiting app on Help:Options page. See: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_76" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
       </li>
       <li>
         Html: Remove exit link from upper left hand corner.
@@ -3754,7 +3754,7 @@
     </p>
     <ul>
       <li>
-        Scribunto: Add luaj as alternate lua engine. See: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_81" title="Options/Scribunto">Options/Scribunto</a>
+        Scribunto: Add luaj as alternate lua engine. See: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_81" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
       </li>
     </ul>
     <p>
