--- a/home/wiki/Change_log/v3.7.4.1.html
+++ b/home/wiki/Change_log/v3.7.4.1.html
@@ -88,7 +88,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Invalidate all Scribunto engines across all wikis when disabled.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_2" title="Options/Scribunto">Options/Scribunto</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_2" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
       </dd>
     </dl>
     <ul>
