--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -122,7 +122,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_27" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_28" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_28" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/TitleBlacklist.html" id="xolnki_29" title="Diagnostics/Scribunto/TitleBlacklist">Diagnostics/Scribunto/TitleBlacklist</a>
