--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,26 +82,29 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.9.2.1 features the following:
+      v3.9.4.1 features the following:
     </p>
     <ul>
       <li>
-        (PC) Fix for Category pages not working
+        (Wiki) Release 2016-09 French, English and German Wikipedia
       </li>
       <li>
-        (PC) New Category system to handle HTML dumps
+        (PC) More minor Category fixes including large categories, dynamic page list and wikidata.org
       </li>
       <li>
-        (PC) Basic page synchronization feature to get latest from online wiki
+        (PC) Page sync shows math and video images
       </li>
       <li>
-        (PC / Android) Download Central changes for dropped connections / Mac OS X
+        (PC / Android) Download Central does not loop endlessly if wrong file size downloaded
       </li>
       <li>
-        (PC) Various parser changes including Protectiong Banner, stack overflow, and invalid UTF-8
+        (PC) Show pages in MediaWiki namespace
       </li>
       <li>
-        (PC) Other minor changes including read-only support, torrent-file links and docs for HTML dump.
+        (PC) Run GUI on Raspberry Pi
+      </li>
+      <li>
+        (PC) More parser fixes including Scribunto regex at end of string and gaps in argument keys
       </li>
     </ul>
     <p>
