--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -492,7 +492,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_21" title="Options/HTTP server">HTTP Server</a>
+              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_21" title="Options/HTTP server" class="xowa-visited">HTTP Server</a>
             </td>
             <td>
               HTTP Server: Run XOWA as an HTTP Server
@@ -542,7 +542,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_26" title="Options/Scribunto">Scribunto</a>
+              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_26" title="Options/Scribunto" class="xowa-visited">Scribunto</a>
             </td>
             <td>
               Scribunto/Lua options (text called in an {{#invoke}} statement)
