--- a/home/wiki/Options/HTTP_server.html
+++ b/home/wiki/Options/HTTP_server.html
@@ -324,7 +324,7 @@ li.active a, li.active a:hover
           <span class="mw-headline" id="Notes">Notes</span>
         </h2>
         <p>
-          See also <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_2" title="App/Xtn/Browser/HTTP Server">App/Xtn/Browser/HTTP_Server</a>
+          See also <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_2" title="App/Xtn/Browser/HTTP Server" class="xowa-visited">App/Xtn/Browser/HTTP_Server</a>
         </p>
         <ol class="references">
           <li id="cite_note-port-0">
