--- a/home/wiki/Options/Security.html
+++ b/home/wiki/Options/Security.html
@@ -320,7 +320,7 @@ li.active a, li.active a:hover
               Web access enabled: <sup id="cite_ref-web_access_enabled_1-0" class="reference"><a href="#cite_note-web_access_enabled-1">[2]</a></sup>
             </td>
             <td>
-              <input xowa_prop="app.user.cfg.security.web_access_enabled" type="checkbox" class="options_checkbox" id='xowa_prop_1' checked='checked'>
+              <input xowa_prop="app.user.cfg.security.web_access_enabled" type="checkbox" accesskey='d' class="options_checkbox" id='xowa_prop_1' checked='checked'>
             </td>
           </tr>
         </table>
