--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2016-09-25</b> French, English and German Wikipedia updated<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_frwiki_latest" class="external text" rel="nofollow">French Wikipedia</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German Wikipedia</a>
+    </li>
+  </ul>
+
   <b>2016-09-05</b> Czech Wikis updated<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_cswiki_latest" class="external text" rel="nofollow">Czech wikis</a>
@@ -111,7 +121,7 @@
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
     </li>
-    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
+    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German Wikipedia</a>
     </li>
   </ul>
 
