--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -148,7 +148,7 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_21" title="App/Xtn/Browser/HTTP Server">HTTP Server</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_21" title="App/Xtn/Browser/HTTP Server" class="xowa-visited">HTTP Server</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_22" title="App/Xtn/Browser/XOWA viewer">XOWA Viewer</a>
