--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -1341,7 +1341,7 @@
         Module.Popups: Do not omit namespace for anchor popups (affects popups showing text from wrong page when link was to non-mainspace page). See: <a href="https://en.wikipedia.org/wiki/Project:Sandbox" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Project:Sandbox</a>
       </li>
       <li>
-        Gui: Do not open external link in xowa if link ends in .html; EX:http://jtidy.sourceforge.net/license.html. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_10" title="Help/About">Help/About</a>
+        Gui: Do not open external link in xowa if link ends in .html; EX:http://jtidy.sourceforge.net/license.html. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_10" title="Help/About" class="xowa-visited">Help/About</a>
       </li>
       <li>
         Html: Show caption text in title (affects tooltips missing caption text); EX:"a [[b]]" -&gt; title="a b" x&gt; "a ". See: <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a>
@@ -2295,7 +2295,7 @@
     </p>
     <ul>
       <li>
-        Gui: Add default shortcut for Font Reset; EX:Ctrl + 0 {requested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_45" title="Options/Shortcuts">Options/Shortcuts</a>
+        Gui: Add default shortcut for Font Reset; EX:Ctrl + 0 {requested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_45" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </li>
     </ul>
     <p>
@@ -2551,7 +2551,7 @@
     </p>
     <ul>
       <li>
-        Gui: Support customizable keyboard shortcuts. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_55" title="Options/Shortcuts">Options/Shortcuts</a>
+        Gui: Support customizable keyboard shortcuts. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_55" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </li>
       <li>
         Gui: Update UI language dynamically (do not require restart). See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_56" title="Options/Language">Options/Language</a>
@@ -2611,7 +2611,7 @@
         Lang: Add lang codes for other minor languages; EX:akz; sxu; etc...
       </li>
       <li>
-        Xtns.Xowa_cmd: Do not double-parse content inside &lt;xowa_cmd&gt; (affects references showing up twice in XOWA home wiki). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_59" title="Options/Shortcuts">Options/Shortcuts</a>
+        Xtns.Xowa_cmd: Do not double-parse content inside &lt;xowa_cmd&gt; (affects references showing up twice in XOWA home wiki). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_59" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </li>
       <li>
         Log: Removed unused log messages. See: <a href="http://xowa.org/home/wiki/Special:XowaSystemData%3Ftype%3Dlog_session.html" id="xolnki_60" title="Special:XowaSystemData?type=log session">Special:XowaSystemData?type=log session</a>
@@ -2659,7 +2659,7 @@
         Html.Jtidy: Add Jtidy for fixing invalid HTML (currently optional; will become default). See: bin/any/java/jtidy/jtidy-r938.jar
       </li>
       <li>
-        Gui: Add Options page for Shortcuts (read-only). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_61" title="Options/Shortcuts">Options/Shortcuts</a>
+        Gui: Add Options page for Shortcuts (read-only). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_61" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </li>
       <li>
         Special.XowaSystemData: Add Special Page to show contents of session log and other files; EX:Menu -&gt; Help -&gt; System data.
@@ -2708,7 +2708,7 @@
         Javascript.Timeline: Remove &lt;timeline&gt; tag from within pre (affects timeline sometimes showing in black colors when jtidy is enabled); EX:old: &lt;pre&gt;&lt;timeline&gt;code&lt;/timeline&gt;&lt;/pre&gt;; new: &lt;pre&gt;code&lt;/pre&gt;. See: <a href="https://fr.wikipedia.org/wiki/Quimper" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Quimper</a>
       </li>
       <li>
-        Javascript.TableSorter: Sort by &lt;input&gt; if available; EX:bin/any/javascript/article-view/jquery.tablesorter.js. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_62" title="Options/Shortcuts">Options/Shortcuts</a>
+        Javascript.TableSorter: Sort by &lt;input&gt; if available; EX:bin/any/javascript/article-view/jquery.tablesorter.js. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_62" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </li>
       <li>
         Url: Escape &amp; for external links when using default view_web launcher of "cmd /c" on Windows; EX:cmd /c start "http://www.culture.gouv.fr/public/mistral/merimee_fr?ACTION=CHERCHER&amp;FIELD_1=REF&amp;VALUE_1=PA59000162". See: <a href="https://fr.wikipedia.org/wiki/Liste_des_monuments_historiques_du_Nord_%28A-L%29" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Liste_des_monuments_historiques_du_Nord_%28A-L%29</a>
@@ -2727,7 +2727,7 @@
     </p>
     <ul>
       <li>
-        Doc: Update license info for third-party XOWA components. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_63" title="Help/About">Help/About</a>
+        Doc: Update license info for third-party XOWA components. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_63" title="Help/About" class="xowa-visited">Help/About</a>
       </li>
     </ul>
     <p>
@@ -4026,7 +4026,7 @@
         Math: Note that MikTeX may fail to update images dynamically for first page {detected by William}.
       </li>
       <li>
-        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents">Help/Contents</a>
+        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents" class="xowa-visited">Help/Contents</a>
       </li>
     </ul>
     <p>
