--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -63,7 +63,7 @@
               <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia" class="xowa-visited">English Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis">Other wikis</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis" class="xowa-visited">Other wikis</a>
             </li>
           </ul>
         </td>
