--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,6 +82,14 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
+      v3.9.4.2 features the following:
+    </p>
+    <ul>
+      <li>
+        (PC) Show Catgories for pages with more than one word in the title
+      </li>
+    </ul>
+    <p>
       v3.9.4.1 features the following:
     </p>
     <ul>
@@ -143,7 +151,7 @@
         </dl>
       </dd>
       <dd>
-        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
+        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents" class="xowa-visited">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
       </dd>
     </dl>
     <dl>
@@ -217,7 +225,7 @@
         v2.8.1 has a language converter dropdown for the Chinese wikis.
       </li>
       <li>
-        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_16" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
+        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_16" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
       </li>
       <li>
         v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_17" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_18" title="App/UI/HTML Browser">HTML Browser</a>
@@ -363,7 +371,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_36" title="Help/Contents">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_36" title="Help/Contents" class="xowa-visited">Contents</a>
         </td>
         <td>
           View all help topics
