--- a/home/wiki/Options/Bookmarks.html
+++ b/home/wiki/Options/Bookmarks.html
@@ -278,7 +278,7 @@ li.active a, li.active a:hover
           For more infomation, visit the <a href="http://xowa.org/home/wiki/App/Bookmarks.html" id="xolnki_2" title="App/Bookmarks">Bookmarks help page</a>
         </p>
         <p>
-          To view your bookmarks, visit <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_3" title="Special:XowaBookmarks">this page</a>
+          To view your bookmarks, visit <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_3" title="Special:XowaBookmarks" class="xowa-visited">this page</a>
         </p>
         <p>
           To view bookmarks for version 2.7.2 and below, visit <a href="http://xowa.org/home/wiki/Data:Bookmarks.html" id="xolnki_4" title="Data:Bookmarks">this page</a>
