--- a/home/wiki/Options/Category.html
+++ b/home/wiki/Options/Category.html
@@ -325,7 +325,7 @@ li.active a, li.active a:hover
               Page categories grouping enabled: <sup id="cite_ref-pagecats_grouping_enabled_1-0" class="reference"><a href="#cite_note-pagecats_grouping_enabled-1">[2]</a></sup>
             </td>
             <td>
-              <input xowa_prop="app.ctg_mgr.pagecats_grouping_enabled" type='checkbox' class="options_chkbox" id='xowa_prop_1' checked='checked'>
+              <input xowa_prop="xowa.api.addon.wikis__ctgs__hidden_enabled" type='checkbox' class="options_chkbox" id='xowa_prop_1'>
             </td>
           </tr>
         </table>
