--- a/home/wiki/Options/Import.html
+++ b/home/wiki/Options/Import.html
@@ -323,11 +323,14 @@ li.active a, li.active a:hover
                 <option value='raw'>
                   text
                 </option>
-                <option value='gzip' selected='selected'>
+                <option value='gzip'>
                   gzip
                 </option>
                 <option value='bzip2'>
                   bzip2
+                </option>
+                <option value='xz' selected='selected'>
+                  xz
                 </option>
               </select>
             </td>
