--- a/home/wiki/Options/Shortcuts.html
+++ b/home/wiki/Options/Shortcuts.html
@@ -291,7 +291,7 @@ li.active a, li.active a:hover
         </div><br>
         <div style='float:right; margin-right:10px; margin-top:5px;'>
           <p>
-            <a href="xowa-cmd:app.user.prefs.save();" accesskey='s'><img src='file:///C:/xowa/bin/any/xowa/file/app.window/save.png' width="16" height="16">Save</a>
+            <a href="javascript:page_save();" accesskey='s'><img src='file:///C:/xowa/bin/any/xowa/file/app.window/save.png' width="16" height="16">Save</a>
           </p>
         </div><br>
          
