--- a/home/wiki/Wiki_setup/Listing.html
+++ b/home/wiki/Wiki_setup/Listing.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>App/Bookmarks - XOWA</title>
+  <title>Wiki setup/Listing - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,153 +11,38 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>App/Bookmarks</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Wiki setup/Listing</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
     <p>
-      Bookmarks allow you to mark a page for later review.
-    </p>
-    <div id="toc" class="toc">
-      <div id="toctitle">
-        <h2>
-          Contents
-        </h2>
-      </div>
-      <ul>
-        <li class="toclevel-1 tocsection-1">
-          <a href="#Adding"><span class="tocnumber">1</span> <span class="toctext">Adding</span></a>
-        </li>
-        <li class="toclevel-1 tocsection-2">
-          <a href="#Viewing"><span class="tocnumber">2</span> <span class="toctext">Viewing</span></a> 
-          <ul>
-            <li class="toclevel-2 tocsection-3">
-              <a href="#HTTP_Server_support"><span class="tocnumber">2.1</span> <span class="toctext">HTTP Server support</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-4">
-              <a href="#Resizing_columns"><span class="tocnumber">2.2</span> <span class="toctext">Resizing columns</span></a>
-            </li>
-          </ul>
-        </li>
-        <li class="toclevel-1 tocsection-5">
-          <a href="#Updating"><span class="tocnumber">3</span> <span class="toctext">Updating</span></a> 
-          <ul>
-            <li class="toclevel-2 tocsection-6">
-              <a href="#Editing"><span class="tocnumber">3.1</span> <span class="toctext">Editing</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-7">
-              <a href="#Deleting"><span class="tocnumber">3.2</span> <span class="toctext">Deleting</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-8">
-              <a href="#Reordering"><span class="tocnumber">3.3</span> <span class="toctext">Reordering</span></a>
-            </li>
-          </ul>
-        </li>
-        <li class="toclevel-1 tocsection-9">
-          <a href="#Old_bookmarks"><span class="tocnumber">4</span> <span class="toctext">Old bookmarks</span></a>
-        </li>
-      </ul>
-    </div>
-    <h2>
-      <span class="mw-headline" id="Adding">Adding</span>
-    </h2>
-    <p>
-      You can add a page to your bookmarks by using the menu bar or the right-click menu.
+      See the following pages for setting up the wikis in your language.
     </p>
     <ul>
       <li>
-        Choose "Bookmarks"
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Simple_wikis.html" id="xolnki_2" title="Wiki setup/Simple wikis">Wiki setup/Simple wikis</a>
       </li>
       <li>
-        Choose "Bookmark this page"
+        <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_3" title="Wiki setup/English wikis">Wiki setup/English wikis</a>
+      </li>
+      <li>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_4" title="Wiki setup/German wikis">Wiki setup/German wikis</a>
+      </li>
+      <li>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_5" title="Wiki setup/French wikis">Wiki setup/French wikis</a>
+      </li>
+      <li>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_6" title="Wiki setup/Polish wikis">Wiki setup/Polish wikis</a>
+      </li>
+      <li>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Czech_wikis.html" id="xolnki_7" title="Wiki setup/Czech wikis">Wiki setup/Czech wikis</a>
+      </li>
+      <li>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Haitian_wikis.html" id="xolnki_8" title="Wiki setup/Haitian wikis">Wiki setup/Haitian wikis</a>
       </li>
     </ul>
-    <p>
-      You will see a notification that starts with "bookmark added"
-    </p>
-    <h2>
-      <span class="mw-headline" id="Viewing">Viewing</span>
-    </h2>
-    <p>
-      You can display a list of all bookmarks by choosing the "Show All Bookmarks" option
-    </p>
-    <h3>
-      <span class="mw-headline" id="HTTP_Server_support">HTTP Server support</span>
-    </h3>
-    <p>
-      Bookmarks can be viewed and edited in HTTP server mode. This has been tested with Firefox (39), Chrome (43), Safari (8) and Internet Explorer (9). If you have an older version and it doesn't work, please report it to <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_2" title="Help/Feedback">Help/Feedback</a>
-    </p>
-    <h3>
-      <span class="mw-headline" id="Resizing_columns">Resizing columns</span>
-    </h3>
-    <p>
-      Columns can be resized by clicking on the cell divider in the header column
-    </p>
-    <h2>
-      <span class="mw-headline" id="Updating">Updating</span>
-    </h2>
-    <p>
-      The bookmarks page provides the following features:
-    </p>
-    <h3>
-      <span class="mw-headline" id="Editing">Editing</span>
-    </h3>
-    <p>
-      To edit a bookmark, click on the edit icon.
-    </p>
-    <p>
-      While in edit mode...
-    </p>
-    <ul>
-      <li>
-        To save the change, click on the disk icon
-      </li>
-      <li>
-        To cancel the change, click on the undo icon
-      </li>
-    </ul>
-    <p>
-      Note that the text boxes support two keyboard shortcuts
-    </p>
-    <ul>
-      <li>
-        Enter: Saves the change. This is the same as clicking save. <sup id="cite_ref-textarea_shortcuts_0-0" class="reference"><a href="#cite_note-textarea_shortcuts-0">[1]</a></sup>
-      </li>
-      <li>
-        Escape: Cancels the change. This is the same as clicking cancel.
-      </li>
-    </ul>
-    <h3>
-      <span class="mw-headline" id="Deleting">Deleting</span>
-    </h3>
-    <p>
-      To delete a bookmark, click on the X icon.
-    </p>
-    <h3>
-      <span class="mw-headline" id="Reordering">Reordering</span>
-    </h3>
-    <p>
-      To move a bookmark to a different position, click on the row header and drag it to its position
-    </p>
-    <p>
-      <br>
-    </p>
-    <h2>
-      <span class="mw-headline" id="Old_bookmarks">Old bookmarks</span>
-    </h2>
-    <p>
-      As of v2.7.3, XOWA now has a <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_3" title="Special:XowaBookmarks" class="xowa-visited">new Bookmarks page</a>. All links will go to the new bookmarks page.
-    </p>
-    <p>
-      If you would like to review old bookmarks, you can still reach them at <a href="http://xowa.org/home/wiki/Data:Bookmarks.html" id="xolnki_4" title="Data:Bookmarks">this link</a>
-    </p>
-    <ol class="references">
-      <li id="cite_note-textarea_shortcuts-0">
-        <span class="mw-cite-backlink"><a href="#cite_ref-textarea_shortcuts_0-0">^</a></span> <span class="reference-text">Note that in a textarea (such as Comments), Enter adds a new line. To save, press Control + Enter</span>
-      </li>
-    </ol>
   
     </div>
   </div>
