--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -36,91 +36,99 @@
           </ul>
         </li>
         <li class="toclevel-1 tocsection-4">
-          <a href="#v3.9.4.1_.282016-09-25.29"><span class="tocnumber">2</span> <span class="toctext">v3.9.4.1 (2016-09-25)</span></a> 
+          <a href="#v3.9.4.2_.282016-09-26.29"><span class="tocnumber">2</span> <span class="toctext">v3.9.4.2 (2016-09-26)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-5">
-              <a href="#Wiki"><span class="tocnumber">2.1</span> <span class="toctext">Wiki</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-6">
-              <a href="#PC"><span class="tocnumber">2.2</span> <span class="toctext">PC</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-7">
-              <a href="#Android"><span class="tocnumber">2.3</span> <span class="toctext">Android</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-8">
-              <a href="#Dev"><span class="tocnumber">2.4</span> <span class="toctext">Dev</span></a>
+              <a href="#PC"><span class="tocnumber">2.1</span> <span class="toctext">PC</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-9">
-          <a href="#v3.9.2.1_.282016-09-11.29"><span class="tocnumber">3</span> <span class="toctext">v3.9.2.1 (2016-09-11)</span></a> 
+        <li class="toclevel-1 tocsection-6">
+          <a href="#v3.9.4.1_.282016-09-25.29"><span class="tocnumber">3</span> <span class="toctext">v3.9.4.1 (2016-09-25)</span></a> 
           <ul>
+            <li class="toclevel-2 tocsection-7">
+              <a href="#Wiki"><span class="tocnumber">3.1</span> <span class="toctext">Wiki</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-8">
+              <a href="#PC_2"><span class="tocnumber">3.2</span> <span class="toctext">PC</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-9">
+              <a href="#Android"><span class="tocnumber">3.3</span> <span class="toctext">Android</span></a>
+            </li>
             <li class="toclevel-2 tocsection-10">
-              <a href="#PC_2"><span class="tocnumber">3.1</span> <span class="toctext">PC</span></a>
+              <a href="#Dev"><span class="tocnumber">3.4</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
         <li class="toclevel-1 tocsection-11">
-          <a href="#Doc"><span class="tocnumber">4</span> <span class="toctext">Doc</span></a>
-        </li>
-        <li class="toclevel-1 tocsection-12">
-          <a href="#Dev_2"><span class="tocnumber">5</span> <span class="toctext">Dev</span></a>
-        </li>
-        <li class="toclevel-1 tocsection-13">
-          <a href="#v3.8.5.1_.282016-08-22.29"><span class="tocnumber">6</span> <span class="toctext">v3.8.5.1 (2016-08-22)</span></a> 
+          <a href="#v3.9.2.1_.282016-09-11.29"><span class="tocnumber">4</span> <span class="toctext">v3.9.2.1 (2016-09-11)</span></a> 
           <ul>
-            <li class="toclevel-2 tocsection-14">
-              <a href="#Wiki_2"><span class="tocnumber">6.1</span> <span class="toctext">Wiki</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-15">
-              <a href="#PC_3"><span class="tocnumber">6.2</span> <span class="toctext">PC</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-16">
-              <a href="#Dev_3"><span class="tocnumber">6.3</span> <span class="toctext">Dev</span></a>
+            <li class="toclevel-2 tocsection-12">
+              <a href="#PC_3"><span class="tocnumber">4.1</span> <span class="toctext">PC</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-17">
-          <a href="#v3.8.3.1_.282016-08-14.29"><span class="tocnumber">7</span> <span class="toctext">v3.8.3.1 (2016-08-14)</span></a> 
+        <li class="toclevel-1 tocsection-13">
+          <a href="#Doc"><span class="tocnumber">5</span> <span class="toctext">Doc</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-14">
+          <a href="#Dev_2"><span class="tocnumber">6</span> <span class="toctext">Dev</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-15">
+          <a href="#v3.8.5.1_.282016-08-22.29"><span class="tocnumber">7</span> <span class="toctext">v3.8.5.1 (2016-08-22)</span></a> 
           <ul>
+            <li class="toclevel-2 tocsection-16">
+              <a href="#Wiki_2"><span class="tocnumber">7.1</span> <span class="toctext">Wiki</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-17">
+              <a href="#PC_4"><span class="tocnumber">7.2</span> <span class="toctext">PC</span></a>
+            </li>
             <li class="toclevel-2 tocsection-18">
-              <a href="#Android_2"><span class="tocnumber">7.1</span> <span class="toctext">Android</span></a>
+              <a href="#Dev_3"><span class="tocnumber">7.3</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
         <li class="toclevel-1 tocsection-19">
-          <a href="#v3.8.2.1_.282016-08-07.29"><span class="tocnumber">8</span> <span class="toctext">v3.8.2.1 (2016-08-07)</span></a> 
+          <a href="#v3.8.3.1_.282016-08-14.29"><span class="tocnumber">8</span> <span class="toctext">v3.8.3.1 (2016-08-14)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-20">
-              <a href="#Wiki_3"><span class="tocnumber">8.1</span> <span class="toctext">Wiki</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-21">
-              <a href="#PC_4"><span class="tocnumber">8.2</span> <span class="toctext">PC</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-22">
-              <a href="#Dev_4"><span class="tocnumber">8.3</span> <span class="toctext">Dev</span></a>
+              <a href="#Android_2"><span class="tocnumber">8.1</span> <span class="toctext">Android</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-23">
-          <a href="#v3.8.1.1_.282016-08-01.29"><span class="tocnumber">9</span> <span class="toctext">v3.8.1.1 (2016-08-01)</span></a> 
+        <li class="toclevel-1 tocsection-21">
+          <a href="#v3.8.2.1_.282016-08-07.29"><span class="tocnumber">9</span> <span class="toctext">v3.8.2.1 (2016-08-07)</span></a> 
           <ul>
-            <li class="toclevel-2 tocsection-24">
-              <a href="#Wiki_4"><span class="tocnumber">9.1</span> <span class="toctext">Wiki</span></a>
+            <li class="toclevel-2 tocsection-22">
+              <a href="#Wiki_3"><span class="tocnumber">9.1</span> <span class="toctext">Wiki</span></a>
             </li>
-            <li class="toclevel-2 tocsection-25">
+            <li class="toclevel-2 tocsection-23">
               <a href="#PC_5"><span class="tocnumber">9.2</span> <span class="toctext">PC</span></a>
             </li>
-            <li class="toclevel-2 tocsection-26">
-              <a href="#Android_3"><span class="tocnumber">9.3</span> <span class="toctext">Android</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-27">
-              <a href="#Dev_5"><span class="tocnumber">9.4</span> <span class="toctext">Dev</span></a>
+            <li class="toclevel-2 tocsection-24">
+              <a href="#Dev_4"><span class="tocnumber">9.3</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-28">
-          <a href="#Archives"><span class="tocnumber">10</span> <span class="toctext">Archives</span></a>
+        <li class="toclevel-1 tocsection-25">
+          <a href="#v3.8.1.1_.282016-08-01.29"><span class="tocnumber">10</span> <span class="toctext">v3.8.1.1 (2016-08-01)</span></a> 
+          <ul>
+            <li class="toclevel-2 tocsection-26">
+              <a href="#Wiki_4"><span class="tocnumber">10.1</span> <span class="toctext">Wiki</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-27">
+              <a href="#PC_6"><span class="tocnumber">10.2</span> <span class="toctext">PC</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-28">
+              <a href="#Android_3"><span class="tocnumber">10.3</span> <span class="toctext">Android</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-29">
+              <a href="#Dev_5"><span class="tocnumber">10.4</span> <span class="toctext">Dev</span></a>
+            </li>
+          </ul>
+        </li>
+        <li class="toclevel-1 tocsection-30">
+          <a href="#Archives"><span class="tocnumber">11</span> <span class="toctext">Archives</span></a>
         </li>
       </ul>
     </div>
@@ -177,6 +185,25 @@
       The most important category to review is <b>major</b>. The other categories may be skipped due to lower importance (if they were more important, they would be bumped up to <b>major</b>).
     </p>
     <h2>
+      <span class="mw-headline" id="v3.9.4.2_.282016-09-26.29">v3.9.4.2 (2016-09-26)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="PC">PC</span>
+    </h3>
+    <ul>
+      <li>
+        Category: Fix categories not showing for pages with more than one word in the page title. {detected by Ope30}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Leonardo_DiCaprio" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Leonardo_DiCaprio</a> <a href="https://en.wikipedia.org/wiki/Solar_System" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Solar_System</a>
+      </dd>
+    </dl>
+    <p>
+      <br>
+    </p>
+    <h2>
       <span class="mw-headline" id="v3.9.4.1_.282016-09-25.29">v3.9.4.1 (2016-09-25)</span>
     </h2>
     <h3>
@@ -216,7 +243,7 @@
       <br>
     </p>
     <h3>
-      <span class="mw-headline" id="PC">PC</span>
+      <span class="mw-headline" id="PC_2">PC</span>
     </h3>
     <p>
       <b>major</b>
@@ -428,7 +455,7 @@
       <span class="mw-headline" id="v3.9.2.1_.282016-09-11.29">v3.9.2.1 (2016-09-11)</span>
     </h2>
     <h3>
-      <span class="mw-headline" id="PC_2">PC</span>
+      <span class="mw-headline" id="PC_3">PC</span>
     </h3>
     <p>
       <b>major</b>
@@ -716,7 +743,7 @@
       </li>
     </ul>
     <h3>
-      <span class="mw-headline" id="PC_3">PC</span>
+      <span class="mw-headline" id="PC_4">PC</span>
     </h3>
     <p>
       <b>major</b>
@@ -932,7 +959,7 @@
       </li>
     </ul>
     <h3>
-      <span class="mw-headline" id="PC_4">PC</span>
+      <span class="mw-headline" id="PC_5">PC</span>
     </h3>
     <p>
       <b>major</b>
@@ -1072,7 +1099,7 @@
       <br>
     </p>
     <h3>
-      <span class="mw-headline" id="PC_5">PC</span>
+      <span class="mw-headline" id="PC_6">PC</span>
     </h3>
     <p>
       <b>major</b>
