--- a/home/wiki/Change_log/2016.html
+++ b/home/wiki/Change_log/2016.html
@@ -1295,7 +1295,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_9" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a> <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_10" title="App/Import/Download Central">App/Import/Download_Central</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_9" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a> <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_10" title="App/Import/Download Central" class="xowa-visited">App/Import/Download_Central</a>
       </dd>
     </dl>
     <ul>
