--- a/home/wiki/Change_log/v3.9.4.1.html
+++ b/home/wiki/Change_log/v3.9.4.1.html
@@ -25,24 +25,51 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#v3.9.4.1_.282016-09-25.29"><span class="tocnumber">1</span> <span class="toctext">v3.9.4.1 (2016-09-25)</span></a> 
+          <a href="#v3.9.4.2_.282016-09-26.29"><span class="tocnumber">1</span> <span class="toctext">v3.9.4.2 (2016-09-26)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-2">
-              <a href="#Wiki"><span class="tocnumber">1.1</span> <span class="toctext">Wiki</span></a>
+              <a href="#PC"><span class="tocnumber">1.1</span> <span class="toctext">PC</span></a>
             </li>
-            <li class="toclevel-2 tocsection-3">
-              <a href="#PC"><span class="tocnumber">1.2</span> <span class="toctext">PC</span></a>
-            </li>
+          </ul>
+        </li>
+        <li class="toclevel-1 tocsection-3">
+          <a href="#v3.9.4.1_.282016-09-25.29"><span class="tocnumber">2</span> <span class="toctext">v3.9.4.1 (2016-09-25)</span></a> 
+          <ul>
             <li class="toclevel-2 tocsection-4">
-              <a href="#Android"><span class="tocnumber">1.3</span> <span class="toctext">Android</span></a>
+              <a href="#Wiki"><span class="tocnumber">2.1</span> <span class="toctext">Wiki</span></a>
             </li>
             <li class="toclevel-2 tocsection-5">
-              <a href="#Dev"><span class="tocnumber">1.4</span> <span class="toctext">Dev</span></a>
+              <a href="#PC_2"><span class="tocnumber">2.2</span> <span class="toctext">PC</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-6">
+              <a href="#Android"><span class="tocnumber">2.3</span> <span class="toctext">Android</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-7">
+              <a href="#Dev"><span class="tocnumber">2.4</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
+    <h2>
+      <span class="mw-headline" id="v3.9.4.2_.282016-09-26.29">v3.9.4.2 (2016-09-26)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="PC">PC</span>
+    </h3>
+    <ul>
+      <li>
+        Category: Fix categories not showing for pages with more than one word in the page title. {detected by Ope30}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Leonardo_DiCaprio" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Leonardo_DiCaprio</a> <a href="https://en.wikipedia.org/wiki/Solar_System" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Solar_System</a>
+      </dd>
+    </dl>
+    <p>
+      <br>
+    </p>
     <h2>
       <span class="mw-headline" id="v3.9.4.1_.282016-09-25.29">v3.9.4.1 (2016-09-25)</span>
     </h2>
@@ -83,7 +110,7 @@
       <br>
     </p>
     <h3>
-      <span class="mw-headline" id="PC">PC</span>
+      <span class="mw-headline" id="PC_2">PC</span>
     </h3>
     <p>
       <b>major</b>
