--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -28,10 +28,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.1/xowa_app_windows_64_v3.9.4.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.2/xowa_app_windows_64_v3.9.4.2.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.1/xowa_app_windows_v3.9.4.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.2/xowa_app_windows_v3.9.4.2.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -39,10 +39,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.1/xowa_app_linux_64_v3.9.4.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.2/xowa_app_linux_64_v3.9.4.2.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.1/xowa_app_linux_v3.9.4.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.2/xowa_app_linux_v3.9.4.2.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -50,10 +50,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.1/xowa_app_macosx_64_v3.9.4.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.2/xowa_app_macosx_64_v3.9.4.2.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.1/xowa_app_macosx_v3.9.4.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.2/xowa_app_macosx_v3.9.4.2.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -61,7 +61,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.1/xowa_app_arm_v3.9.4.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.2/xowa_app_arm_v3.9.4.2.zip" rel="nofollow" class="external text">Raspberry Pi</a>
       </li>
     </ul>
     <h2>
@@ -69,7 +69,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.1/xowa_app_android_v3.9.4.1.apk" rel="nofollow" class="external text">Android</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.9.4.1/xowa_app_android_v3.9.4.2.apk" rel="nofollow" class="external text">Android</a>
       </li>
     </ul>
     <h2>
@@ -77,7 +77,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v3.9.4.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
+        <a href="https://github.com/gnosygnu/xowa/archive/v3.9.4.2.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
       </li>
     </ul>
     <h2>
@@ -88,6 +88,25 @@
         <a href="https://github.com/gnosygnu/xowa_android/archive/master.zip" rel="nofollow" class="external text">Source code (Android)</a>
       </li>
     </ul>
+    <h2>
+      <span class="mw-headline" id="v3.9.4.2_.282016-09-26.29">v3.9.4.2 (2016-09-26)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="PC">PC</span>
+    </h3>
+    <ul>
+      <li>
+        Category: Fix categories not showing for pages with more than one word in the page title. {detected by Ope30}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Leonardo_DiCaprio" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Leonardo_DiCaprio</a> <a href="https://en.wikipedia.org/wiki/Solar_System" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Solar_System</a>
+      </dd>
+    </dl>
+    <p>
+      <br>
+    </p>
     <h2>
       <span class="mw-headline" id="v3.9.4.1_.282016-09-25.29">v3.9.4.1 (2016-09-25)</span>
     </h2>
@@ -128,7 +147,7 @@
       <br>
     </p>
     <h3>
-      <span class="mw-headline" id="PC">PC</span>
+      <span class="mw-headline" id="PC_2">PC</span>
     </h3>
     <p>
       <b>major</b>
