--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -365,7 +365,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_7" title="Options/Shortcuts">Shortcuts</a>
+              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_7" title="Options/Shortcuts" class="xowa-visited">Shortcuts</a>
             </td>
             <td>
               Keyboard shortcuts
